--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-confetti": "^6.4.0",
+    "react-dom": "^19.1.0",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
