--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": [
-			"**",
-			"!src/routeTree.gen.ts"
-		]
+		"includes": ["**", "!src/routeTree.gen.ts"]
 	},
 	"formatter": {
 		"enabled": true,
